# OuterSpace

./: .gitignore  CMakeLists.txt  README.markdown  SDL_test_1.cbp  SDL_test_1.depend  SDL_test_1.layout
data/: audio~  highscores  highscores~  settings~
headers/: CApp.h  CEvent.h  CHighscores.h  CMacros.h  CMenu.h  CMusic.h  CObjects.h  CSurface.h
sources/: CApp.cpp  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnMusic.cpp  CApp_OnRender.cpp  CEvent.cpp  CHighscores.cpp  CMacros.cpp  CMenu.cpp  CMusic.cpp  CObjects.cpp  CSurface.cpp
sources/cmake/: FindSDL2_ttf.cmake
